# StyleTransferBot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: docker-image.yml  python-tests.yml  python_tests.yml
TransferBot/: __init__.py
TransferBot/bot/: __init__.py  bot_answers.py  transfer_bot.py
TransferBot/model/: __init__.py  fast_transfer.py  feature_extraction.py  gan_transfer.py  modules.py  protocol.py  slow_transfer.py  transformer_net.py  utils.py  vgg.py  vgg16.py  vgg19.py  vgg2.py
notebooks/: [dls]monet_gan_train.ipynb  [dls_project]training.ipynb
tests/: conftest.py  test_bot.py  test_bot_old.py
transferbot/bot/: __init__.py  transfer_bot.py
transferbot/model/: __init__.py  fast_transfer.py  gan_transfer.py  protocol.py  slow_transfer.py
